fix cli cmds
